// Produced by Acceleo Cpp Generator 1.1.0-R7S1-20151214

import "ccsds_mal/types.proto";

package pusGroundModel.protobuf;

message Pus011SyncPoint {
extensions 4 to 104;

  optional ccsds_mal.protobuf.UINTEGER apid = 1;
  optional ccsds_mal.protobuf.BOOLEAN modelIsEmpty = 2;
  optional ccsds_mal.protobuf.TIME groundDate = 3;
}
